# tesis-ardrone

./: .gitignore  CMakeLists.txt  colores.txt  main.cpp  tesis-ardrone.kdev4
config/: environment.json  main.json
includes/: CMakeLists.txt  structures.hpp
includes/classes/: configuration_manager.hpp  environment.hpp  environment_configuration.hpp  pid.hpp  pid_yaw.hpp  video.hpp
includes/config/: configutarion.hpp
includes/core/: environment.hpp  threads.hpp  video.hpp
includes/core/data/: videodata.hpp
includes/core/message/: message_server.hpp
includes/util/: keys.hpp  util.hpp
src/: CMakeLists.txt  environment.cpp  video.cpp
src/classes/: configuration_manager.cpp  environment.cpp  environment_configuration.cpp  pid.cpp  pid_yaw.cpp  video.cpp
src/core/: CMakeLists.txt  camera_thread.cpp  gui_thread.cpp  gui_thread.cpp~  message_service_thread.cpp  robot_thread.cpp  rutina_thread.cpp
src/core/data/: videodata.cpp
src/core/message/: message_server.cpp  message_server.impl.cpp
src/util/: util.cpp
tools/: hsv_filter.py
